clean everything up

--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -68,18 +68,18 @@
   <ItemGroup>
     <None Remove="Resources\audio\chartSelect\click0.ogg" />
     <None Remove="Resources\audio\launchtower-title-loop.ogg" />
-    <None Remove="Resources\scripts\bindingMenu.lua" />
     <None Remove="Resources\scripts\chartSelect.lua" />
+    <None Remove="Resources\scripts\controllerBinding.lua" />
     <None Remove="Resources\scripts\driver.lua" />
     <None Remove="Resources\scripts\game.lua" />
     <None Remove="Resources\scripts\game\backgrounds\stars.lua" />
     <None Remove="Resources\scripts\game\chart-result.lua" />
     <None Remove="Resources\scripts\generic-layer.lua" />
     <None Remove="Resources\scripts\layerLayout.lua" />
-    <None Remove="Resources\scripts\settingsMenu.lua" />
     <None Remove="Resources\scripts\splashScreen.lua" />
     <None Remove="Resources\scripts\testPrinter.lua" />
     <None Remove="Resources\scripts\titleScreen.lua" />
+    <None Remove="Resources\scripts\userConfig.lua" />
     <None Remove="Resources\textures\bgHighContrast_LS.png" />
     <None Remove="Resources\textures\bgHighContrast_PR.png" />
     <None Remove="Resources\textures\chartSelect\chartFrame\background.png" />
@@ -173,8 +173,8 @@
     <EmbeddedResource Include="Resources\materials\hold.fs" />
     <EmbeddedResource Include="Resources\materials\laser.fs" />
     <EmbeddedResource Include="Resources\materials\laser_entry.fs" />
-    <EmbeddedResource Include="Resources\scripts\bindingMenu.lua" />
     <EmbeddedResource Include="Resources\scripts\chartSelect.lua" />
+    <EmbeddedResource Include="Resources\scripts\controllerBinding.lua" />
     <EmbeddedResource Include="Resources\scripts\driver.lua" />
     <EmbeddedResource Include="Resources\scripts\game.lua" />
     <EmbeddedResource Include="Resources\scripts\game\backgrounds\stars.lua" />
@@ -183,9 +183,9 @@
     <EmbeddedResource Include="Resources\scripts\game\main.lua" />
     <EmbeddedResource Include="Resources\scripts\generic-layer.lua" />
     <EmbeddedResource Include="Resources\scripts\layerLayout.lua" />
-    <EmbeddedResource Include="Resources\scripts\settingsMenu.lua" />
     <EmbeddedResource Include="Resources\scripts\splashScreen.lua" />
     <EmbeddedResource Include="Resources\scripts\titleScreen.lua" />
+    <EmbeddedResource Include="Resources\scripts\userConfig.lua" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_LS.png" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_PR.png" />
     <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\background.png" />
