Updates scoring stuff

--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -73,7 +73,7 @@
     <None Remove="Resources\scripts\controllerBinding.lua" />
     <None Remove="Resources\scripts\driver.lua" />
     <None Remove="Resources\scripts\game.lua" />
-    <None Remove="Resources\scripts\game\chart-result.lua" />
+    <None Remove="Resources\scripts\game\results.lua" />
     <None Remove="Resources\scripts\generic-layer.lua" />
     <None Remove="Resources\scripts\layerLayout.lua" />
     <None Remove="Resources\scripts\linearToggle.lua" />
@@ -83,6 +83,17 @@
     <None Remove="Resources\scripts\titleScreen.lua" />
     <None Remove="Resources\scripts\userConfig.lua" />
     <None Remove="Resources\scripts\util\textInput.lua" />
+    <None Remove="Resources\textures\badges\A.png" />
+    <None Remove="Resources\textures\badges\AA.png" />
+    <None Remove="Resources\textures\badges\AAA.png" />
+    <None Remove="Resources\textures\badges\AAAX.png" />
+    <None Remove="Resources\textures\badges\AAX.png" />
+    <None Remove="Resources\textures\badges\AX.png" />
+    <None Remove="Resources\textures\badges\B.png" />
+    <None Remove="Resources\textures\badges\C.png" />
+    <None Remove="Resources\textures\badges\F.png" />
+    <None Remove="Resources\textures\badges\Perfect.png" />
+    <None Remove="Resources\textures\badges\S.png" />
     <None Remove="Resources\textures\bgHighContrast_LS.png" />
     <None Remove="Resources\textures\bgHighContrast_PR.png" />
     <None Remove="Resources\textures\chartSelect\chartFrame\background.png" />
@@ -182,7 +193,7 @@
     <EmbeddedResource Include="Resources\scripts\driver.lua" />
     <EmbeddedResource Include="Resources\scripts\game.lua" />
     <EmbeddedResource Include="Resources\scripts\game\backgrounds\stars.lua" />
-    <EmbeddedResource Include="Resources\scripts\game\chart-result.lua" />
+    <EmbeddedResource Include="Resources\scripts\game\results.lua" />
     <EmbeddedResource Include="Resources\scripts\game\main.lua" />
     <EmbeddedResource Include="Resources\scripts\generic-layer.lua" />
     <EmbeddedResource Include="Resources\scripts\layerLayout.lua" />
@@ -192,6 +203,17 @@
     <EmbeddedResource Include="Resources\scripts\titleScreen.lua" />
     <EmbeddedResource Include="Resources\scripts\userConfig.lua" />
     <EmbeddedResource Include="Resources\scripts\util\textInput.lua" />
+    <EmbeddedResource Include="Resources\textures\badges\A.png" />
+    <EmbeddedResource Include="Resources\textures\badges\AA.png" />
+    <EmbeddedResource Include="Resources\textures\badges\AAA.png" />
+    <EmbeddedResource Include="Resources\textures\badges\AAAX.png" />
+    <EmbeddedResource Include="Resources\textures\badges\AAX.png" />
+    <EmbeddedResource Include="Resources\textures\badges\AX.png" />
+    <EmbeddedResource Include="Resources\textures\badges\B.png" />
+    <EmbeddedResource Include="Resources\textures\badges\C.png" />
+    <EmbeddedResource Include="Resources\textures\badges\F.png" />
+    <EmbeddedResource Include="Resources\textures\badges\Perfect.png" />
+    <EmbeddedResource Include="Resources\textures\badges\S.png" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_LS.png" />
     <EmbeddedResource Include="Resources\textures\bgHighContrast_PR.png" />
     <EmbeddedResource Include="Resources\textures\chartSelect\chartFrame\background.png" />
