--- a/NeuroSonic/NeuroSonic.csproj
+++ b/NeuroSonic/NeuroSonic.csproj
@@ -9,6 +9,11 @@
 
   <PropertyGroup>
     <Nullable>enable</Nullable>
+    <Version>0.1.0</Version>
+    <Authors>Local Atticus</Authors>
+    <Company>AudFx</Company>
+    <PackageProjectUrl />
+    <RepositoryUrl>https://www.github.com/audfx/neurosonic</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Deploy|netstandard2.0|x64'">
@@ -79,11 +84,13 @@
     <None Remove="Resources\scripts\layerLayout.lua" />
     <None Remove="Resources\scripts\linearToggle.lua" />
     <None Remove="Resources\scripts\livebg.lua" />
+    <None Remove="Resources\scripts\multiplayer.lua" />
     <None Remove="Resources\scripts\splashScreen.lua" />
     <None Remove="Resources\scripts\testPrinter.lua" />
     <None Remove="Resources\scripts\titleScreen.lua" />
     <None Remove="Resources\scripts\userConfig.lua" />
     <None Remove="Resources\scripts\util\textInput.lua" />
+    <None Remove="Resources\scripts\util\textures.lua" />
     <None Remove="Resources\textures\badges\A.png" />
     <None Remove="Resources\textures\badges\AA.png" />
     <None Remove="Resources\textures\badges\AAA.png" />
@@ -209,10 +216,12 @@
     <EmbeddedResource Include="Resources\scripts\layerLayout.lua" />
     <EmbeddedResource Include="Resources\scripts\linearToggle.lua" />
     <EmbeddedResource Include="Resources\scripts\livebg.lua" />
+    <EmbeddedResource Include="Resources\scripts\multiplayer.lua" />
     <EmbeddedResource Include="Resources\scripts\splashScreen.lua" />
     <EmbeddedResource Include="Resources\scripts\titleScreen.lua" />
     <EmbeddedResource Include="Resources\scripts\userConfig.lua" />
     <EmbeddedResource Include="Resources\scripts\util\textInput.lua" />
+    <EmbeddedResource Include="Resources\scripts\util\textures.lua" />
     <EmbeddedResource Include="Resources\textures\badges\A.png" />
     <EmbeddedResource Include="Resources\textures\badges\AA.png" />
     <EmbeddedResource Include="Resources\textures\badges\AAA.png" />
